# Horizon-Game-Engine

./: .gitignore  CMakeLists.txt  HorizonScript.odt  README.md  build-engine-editor-example.bat  build-engine-editor.bat  build-engine.bat  generate-cmake-editor.bat  generate-cmake-engine.bat  initial-build.bat
editor/: CMakeLists.txt  build-editor.bat  nested-build.bat
editor/copy-build/: config.ini  editor.json  editor_layout.ini  generate_cmake.py  imgui.ini  wins.ini
editor/copy-build/game/: player.hs
editor/copy-build/images/: file.psd
editor/installer/: installer_script.iss
editor/ressources/: icon.rc
editor/src/: main.cpp
editor/src/core/: history.cpp  history.h
editor/src/ui/: Image.cpp  Image.h  common.cpp  common.h  menu_bar.cpp  menu_bar.h  style.cpp  style.h  toolbar.cpp  toolbar.h  window.cpp  window.h
editor/src/ui/widgets/: ActorTitle.cpp  ActorTitle.h  ComboBox.cpp  ComboBox.h  Details.cpp  Details.h  FileButton.cpp  FileButton.h  FileInput.cpp  FileInput.h  IconButton.cpp  IconButton.h  TitleIcon.cpp  TitleIcon.h
editor/src/ui/windows/: actor_details.cpp  actor_details.h  console.h  content_browser.cpp  content_browser.h  open_project.cpp  open_project.h  outliner.cpp  outliner.h  place_actors.cpp  place_actors.h  project_configuration.cpp  project_configuration.h  script_editor.cpp  script_editor.h  texture_editor.cpp  texture_editor.h  viewport.cpp  viewport.h
example/: CMakeLists.txt  config.ini  example.hgeproj  input.json  module.cpp
example/package/: main.hsc  mat.mat  player.hs  test.hsc
example/package/scenes/: main.hsc
example/src/: box.cpp  box.h  player.cpp  player.h
src/components/: base_component.cpp  base_component.h  camera.cpp  camera.h  light.cpp  light.h  scene_component.cpp  sprite.cpp  sprite.h
src/core/: actor.cpp  common.cpp  common.h  engine.cpp  engine.h  input.cpp  level.cpp  level.h  object.cpp  object.h  ordered_map.h  player_controller.cpp  typename.h
src/core/data/: event_dispatcher.h
src/core/private/: input_manager.cpp  material_parser.cpp  runtime_ressources.cpp
src/filesystem/: filesystem.cpp  ini_parser.cpp  ini_parser.h
src/modules/: factory.cpp  factory.h
src/modules/private/: system_module.cpp  system_module.h
src/physics/: debug_draw.cpp  debug_draw.h  world.cpp  world.h
src/std-private/: light_actor.cpp  std_module.cpp
